--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-prettier": "^4.1.0",
+    "eslint-import-resolver-node": "^0.3.2",
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jest": "^22.5.0",
     "eslint-plugin-node": "^8.0.1",
