--- a/package.json
+++ b/package.json
@@ -67,12 +67,17 @@
     "eslint-plugin-jest": "^22.5.0",
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-prettier": "^3.0.1",
+    "execa": "^1.0.0",
     "fast-async": "^7.0.6",
     "find-up": "^3.0.0",
+    "fs-extra": "^7.0.1",
+    "globby": "^8.0.0",
     "jest": "^24.7.1",
     "jest-circus": "^24.7.1",
+    "load-json-file": "^4.0.0",
     "normalize-newline": "^3.0.0",
     "normalize-path": "^3.0.0",
+    "p-map": "^1.0.0",
     "path-key": "^2.0.1",
     "prettier": "^1.17.0",
     "tacks": "^1.3.0",
