--- a/utils/listable/package.json
+++ b/utils/listable/package.json
@@ -32,5 +32,8 @@
     "@lerna/batch-packages": "file:../batch-packages",
     "chalk": "^2.3.1",
     "columnify": "^1.5.4"
+  },
+  "devDependencies": {
+    "@lerna/package": "link:../../core/package"
   }
 }
