--- a/commands/publish/package.json
+++ b/commands/publish/package.json
@@ -64,5 +64,8 @@
     "p-reduce": "^1.0.0",
     "pacote": "^9.5.0",
     "semver": "^5.5.0"
+  },
+  "devDependencies": {
+    "@lerna/project": "link:../../core/project"
   }
 }
