--- a/commands/publish/package.json
+++ b/commands/publish/package.json
@@ -66,6 +66,7 @@
     "semver": "^5.5.0"
   },
   "devDependencies": {
+    "@lerna/package-graph": "link:../../core/package-graph",
     "@lerna/project": "link:../../core/project"
   }
 }
