--- a/utils/npm-dist-tag/package.json
+++ b/utils/npm-dist-tag/package.json
@@ -32,9 +32,9 @@
     "test": "echo \"Run tests from root\" && exit 1"
   },
   "dependencies": {
+    "@evocateur/npm-registry-fetch": "^3.9.1",
     "figgy-pudding": "^3.5.1",
     "npm-package-arg": "^6.1.0",
-    "npm-registry-fetch": "^3.9.0",
     "npmlog": "^4.1.2"
   }
 }
