--- a/utils/npm-publish/package.json
+++ b/utils/npm-publish/package.json
@@ -31,10 +31,10 @@
     "test": "echo \"Run tests from root\" && exit 1"
   },
   "dependencies": {
+    "@evocateur/libnpmpublish": "^1.2.0",
     "@lerna/run-lifecycle": "file:../run-lifecycle",
     "figgy-pudding": "^3.5.1",
     "fs-extra": "^7.0.0",
-    "libnpmpublish": "^1.1.1",
     "npm-package-arg": "^6.1.0",
     "npmlog": "^4.1.2",
     "pify": "^3.0.0",
